[package]
name = "boxext"
version = "0.1.4"
authors = ["Mike Hommey <mh@glandium.org>"]
license = "Apache-2.0/MIT"
description = "Extensions to the `Box` type"
repository = "https://github.com/glandium/boxext"
readme = "README.md"
keywords = ["box", "allocator"]

[features]
default = ["std"]
std = []

[dependencies]
allocator_api = { version = "0.5", optional = true, git = "https://github.com/glandium/allocator_api" }

[dev-dependencies]
boxext_derive = { path = "boxext_derive", version = "0.1" }

[build-dependencies]
rustc_version = "0.2"
