[package]
name = "boxext"
version = "0.1.6"
authors = ["Mike Hommey <mh@glandium.org>"]
license = "Apache-2.0/MIT"
description = "Extensions to the `Box` type"
repository = "https://github.com/glandium/boxext"
readme = "README.md"
keywords = ["box", "allocator"]

[features]
default = ["std"]
std = []
# Below are dummy features for backwards compatibility. Remove when version bumps to 0.2.
unstable-rust = []
fallible = []

[dependencies]
allocator_api = { version = ">=0.5, <0.7", optional = true, default-features = false }

[dev-dependencies]
boxext_derive = { path = "boxext_derive", version = "0.1" }
