[package]
name = "boxext_derive"
version = "0.1.3"
authors = ["Mike Hommey <mh@glandium.org>"]
license = "Apache-2.0/MIT"
description = "Custom Derive for the `boxext::Zero` trait"
repository = "https://github.com/glandium/boxext"
readme = "README.md"
keywords = ["box", "allocator", "derive"]

[dependencies]
syn = ">= 0.12, <0.16"
quote = ">=0.4, <0.7"

[lib]
proc-macro = true
